# DSAI_5201_RAG_system

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
app/: main.py
app/dataset_processing/: dataset_loader.py  embedder.py  vector_store.py
app/graph/: builder.py  router.py  state.py
app/nodes/: generation.py  grading.py  retrieval.py  rewriting.py
app/services/: llm_service.py  retriever.py
app/utils/: constants.py  tracer.py
backend/: README.md  run.py
backend/src/: __init__.py  config.py  dependencies.py  main.py
backend/src/api/: __init__.py  routes.py  websocket.py
backend/src/engines/: __init__.py  base.py  core_engine.py  fake_engine.py
backend/src/schemas/: __init__.py  events.py  messages.py
backend/src/services/: __init__.py  session_service.py
config/: __init__.py  logging.py  settings.py
docker/: backend-entrypoint.sh
li_module/: build_index.py
scripts/: build_index.py  eval_e2e.py  eval_results_split.json  eval_results_uniform.json  run_backend_server.sh  setup_data.py
tests/: eval_rewrite.py  test_llm_service.py  test_llm_service_live.py  test_retrieval.py  test_rewriting.py
tests/unit/: test_backend_service.py  test_grading.py  test_llm_service.py  test_llm_service_live.py  test_retrieval.py  test_workflow.py
tools/: debug_rag.py
web/: .env.example  README.md  vercel.json  vite.config.ts
web/src/: vite-env.d.ts
web/src/app/: App.tsx
web/src/app/components/: answer-card.tsx  loading-steps.tsx  markdown-answer.tsx  query-input.tsx  (+2 more)
web/src/styles/: theme.css
(+7 files in other folders)
