[project]
name = "dsai-5201-rag-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.8.0",
    "fastapi>=0.115.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "pydantic>=2.0.0",
    "pytest>=8.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.30.0",
    "websockets>=16.0",
]
